fix forward as attachment regression, r=neil, bug 736789